--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 cfg-if = "1"
-
+bytemuck = "1.9.1"
 winit = "0.26.1"
 pollster = "0.2.4"
 anyhow = "1.0.52"
