--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,12 @@ env_logger = "0.9"
 log = "0.4.14"
 wgpu = "0.12.0"
 
+[dependencies.image]
+version = "0.24"
+default-features = false
+features = ["png", "jpeg"]
+
+
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 console_error_panic_hook = "0.1.6"
 console_log = "0.2.0"
