--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ cgmath = "0.18.0"
 env_logger = "0.9"
 log = "0.4.14"
 wgpu = "0.12.0"
+instant = "0.1.12"
 
 [dependencies.image]
 version = "0.24"
