--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,4 +30,4 @@ console_log = "0.2.0"
 wgpu = { version = "0.12", features = ["webgl"]}
 wasm-bindgen = "0.2"
 wasm-bindgen-futures = "0.4"
-web-sys = { version = "0.3", features = [ "Document", "Window", "Element" ]}
+web-sys = { version = "0.3", features = [ "Document", "Window", "Element", "HtmlElement" ]}
