--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,19 +6,35 @@ edition = "2021"
 [lib]
 crate-type = ["cdylib", "rlib"]
 
+[[bin]]
+name = "client"
+edition = "2021"
+path = "src/main.rs"
+
+[[bin]]
+name = "server"
+edition = "2021"
+path = "src/game/server/main.rs"
+
 [dependencies]
 cfg-if = "1"
 bytemuck = "1.9.1"
 winit = "0.26.1"
 pollster = "0.2.4"
 anyhow = "1.0.52"
-cgmath = "0.18.0"
 euclid = "0.22.7"
 env_logger = "0.9"
 log = "0.4.14"
 wgpu = "0.12.0"
 instant = "0.1.12"
 rectangle-pack = "0.4.2"
+serde = "1.0.137"
+bincode = "1.3.3"
+rand = "0.8.5"
+
+[dependencies.cgmath]
+version = "0.18.0"
+features = ["serde"]
 
 [dependencies.image]
 version = "0.24"
@@ -28,6 +44,15 @@ features = ["png", "jpeg"]
 [dependencies.imageproc]
 version = "0.23.0"
 default-features = false
+
+[dependencies.uuid]
+version = "1.1.2"
+features = [
+    "v4",                # Lets you generate random UUIDs
+    "fast-rng",          # Use a faster (but still sufficiently random) RNG
+    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
+    "serde",
+]
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 console_error_panic_hook = "0.1.6"
