--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,10 @@ serde = "1.0.137"
 bincode = "1.3.3"
 rand = "0.8.5"
 
+[dependencies.getrandom]
+version = "0.2.7"
+features = ["js"]
+
 [dependencies.cgmath]
 version = "0.18.0"
 features = ["serde"]
